# jinja-tree

./: .gitignore  .jinja-tree.toml  .mergify.yml  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  README.md.template  Taskfile.yml  entrypoint-stdin.sh  entrypoint.sh  pyproject.toml
.github/: renovate.json  renovate.json5
.github/workflows/: ci.yml  common-labels.yml  renovate-non-security.json  renovate-non-security.yml  renovate-security.json  renovate-security.yml  renovate.yml
.task/checksum/: uv-lock  uv-sync
.task/taskfiles/: Taskfile-misc.yml  Taskfile-node-npm.yml  Taskfile-python-uv.yml  Taskfile-uv.yml
.task/taskfiles/utils/: echo_failed  echo_ok  echo_running  set-version.py  wrap
docker/: Dockerfile  Makefile
docs/: details-about-configuration.md  details-about-configuration.md.template  details-about-overall-operation.md  details-about-plugins.md  details-about-plugins.md.template  details-about-real-life-example1.md  details-about-real-life-example2.md  details-about-real-life-example2.md.template  jinja-tree.toml  jinja-tree.toml.template
jinja_tree/app/: __init__.py  action.py  config.py  context.py  file_action.py  jinja.py  jinja_tree.py
jinja_tree/app/embedded_extensions/: counter.py  double_quotes.py  fnmatch.py  from_json.py  from_toml.py  shell.py  urlencode.py
jinja_tree/infra/: utils.py
jinja_tree/infra/adapters/: action.py  context.py  file_action.py
jinja_tree/infra/controllers/: cli_common.py  cli_stdin.py  cli_tree.py
tests/app/: test_config.py  test_context_service.py  test_embedded.py  test_file_action_service.py  test_jinja_service.py
tests/app/data/: foo2.template
tests/infra/: test_adapters_context.py  test_adapters_file_action.py  test_controllers.py  test_main_config_file.py  test_utils.py
tests/infra/data/: deep1.toml  deep2.toml  foo.toml
tools/jinja_tree_plugins/: context.py
